cilium-cli/connectivity/builder/manifests/host-firewall-egress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "host-firewall-egress"
spec:
  nodeSelector: {}
  egress:
  - toEntities:
    - health
    - kube-apiserver
    - remote-node
    - world
  - toEndpoints:
    - matchExpressions:
      - key: name
        operator: NotIn
        values:
        - echo-other-node
      - { key: io.cilium.k8s.policy.cluster, operator: Exists }
